--- a/AuthorizationService/AuthorizationService.yaml
+++ b/AuthorizationService/AuthorizationService.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: dockersamplerepos
-        image: pod2auditacr.azurecr.io/dockersamplerepos:latest
+        image: sample1cr.azurecr.io/dockersamplerepos:latest
         ports:
         - containerPort: 8080
       imagePullSecrets:
